--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     align-items: flex-start;
     max-width: 1200px;
-    margin: 0px auto 50px auto;
+    margin: 0 auto;
     height: fit-content;
 }
 
