--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -3,8 +3,8 @@
   <app-associados></app-associados>
   <app-noticia></app-noticia>
   <!-- <app-navio></app-navio> -->
-  <app-imagens2 [images]="images2"
+  <!-- <app-imagens2 [images]="images2"
   [autoSlide]="true"
-  [controls]="true"></app-imagens2>
+  [controls]="true"></app-imagens2> -->
   <app-animacao-rodape></app-animacao-rodape>
 </div>
