Modificações Solicitadas por Valdir no dia 26/05/2025
Organização dos componentes e adição do campo "Liderança"

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -6,5 +6,6 @@
   <!-- <app-imagens2 [images]="images2"
   [autoSlide]="true"
   [controls]="true"></app-imagens2> -->
+  <app-lideranca></app-lideranca>
   <app-animacao-rodape></app-animacao-rodape>
 </div>
