--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@
   --widthCorpo: 1920px;
 
   --pattern1: url('../public/assets/Patern_Prancheta1.png');
+  --pattern6: url('../public/assets/Patern6_Prancheta1.png');
 
   --image-sobre: url('../public/Galeria/Compromisso_SEM_LOGO.jpg');
   --image-sobre-celular: url('../public/Galeria/Compromisso_SEM_LOGO_Celular.jpg');
